<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClassiApp.MainActivity">

    <Button
        android:id="@+id/btn_klasifikasi"
        style="@style/Text.P6"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_pick_image"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/classify_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pick_image" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="180dp"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:contentDescription="Pilih foto"
        android:onClick="pickPhoto"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextBold.H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_tagline"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Text.P6"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/classi_steps"
        android:textAlignment="center"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/btn_pick_image"
        style="@style/Text.P6"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePreview"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/unggah_button1"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview" />

</androidx.constraintlayout.widget.ConstraintLayout>